--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="text-center p-4 bg-overlay-auto rounded-5">
-                    <h2 class="font-esthetic mb-4" style="font-size: 2rem;">Della &amp; Arsyad</h2>
+                    <h2 class="font-darleston mb-4" style="font-size: 2rem;">Della &amp; Arsyad</h2>
                     <p class="m-0" style="font-size: 1rem;">Sabtu, 8 November 2025</p>
                 </div>
             </div>
@@ -143,7 +143,7 @@
 
                         <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&" fetchpriority="high" decoding="async" alt="bg" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
 
-                        <h2 class="font-esthetic my-4" style="font-size: 2.25rem;">Della &amp; Arsyad</h2>
+                        <h2 class="font-darleston my-4" style="font-size: 2.25rem;">Della &amp; Arsyad</h2>
                         <p class="my-2" style="font-size: 1.25rem;">Sabtu, 8 November 2025</p>
 
                         <button class="btn btn-outline-auto btn-sm shadow rounded-pill px-3 py-1" style="font-size: 0.825rem;">
@@ -171,7 +171,7 @@
                 <!-- Bride -->
                 <section class="bg-white-black text-center pb-4" id="bride">
                     <h2 class="font-arabic py-4 m-0" style="font-size: 2rem;">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</h2>
-                    <h2 class="font-amiri py-4 m-0" style="font-size: 2rem;">Assalamualaikum Warahmatullahi Wabarakatuh</h2>
+                    <!-- <h2 class="font-amiri py-4 m-0" style="font-size: 2rem;">Assalamualaikum Warahmatullahi Wabarakatuh</h2> -->
                     <p class="font-lora pb-4 px-2 m-0" style="font-size: 0.95rem;">Tanpa mengurangi rasa hormat, kami mengundang Anda untuk berkenan menghadiri acara pernikahan kami:</p>
 
                     <div class="position-relative">
@@ -189,10 +189,10 @@
                             <h2 class="font-esthetic m-0" style="font-size: 2.125rem;">Novita Rizkia Della Khairunnisa</h2>
                         </div>
                         <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
-                            <p class="mt-3 mb-1" style="font-size: 1.25rem;">Putri pertama</p>
-                            <p class="mb-0" style="font-size: 0.95rem;">Bapak Sunhaji</p>
-                            <p class="mb-0" style="font-size: 0.95rem;">dan</p>
-                            <p class="mb-0" style="font-size: 0.95rem;">Ibu Ariza Umami Fitrianti</p>
+                            <p class="font-lora mt-3 mb-1" style="font-size: 1.25rem;">Putri pertama</p>
+                            <p class="font-lora mb-0" style="font-size: 0.95rem;">Bapak Sunhaji</p>
+                            <p class="font-lora mb-0" style="font-size: 0.95rem;">dan</p>
+                            <p class="font-lora mb-0" style="font-size: 0.95rem;">Ibu Ariza Umami Fitrianti</p>
                         </div>
 
                         <!-- Love animation -->
@@ -216,16 +216,16 @@
                         </div>
 
                         <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
-                            <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657984654409728/cowo.webp?ex=68e4bfa4&is=68e36e24&hm=f0f0f74d9a2b4a923ed19f5705981370b10c4f76a865509cbcba67feffd70a43&" fetchpriority="high" decoding="async" alt="cowo" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
+                            <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424670175944511520/cowo.webp?ex=68e4caff&is=68e3797f&hm=f48e26d6b06876d4fefe858e4aa1eccb267f6f2530abfb40fddd00561943a309&" fetchpriority="high" decoding="async" alt="cowo" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
                         </div>
                         <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
                             <h2 class="font-esthetic m-0" style="font-size: 2.125rem;">Arsyad Muhammad Khoiri</h2>
                         </div>
                         <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
-                            <p class="mt-3 mb-1" style="font-size: 1.25rem;">Putra ketiga</p>
-                            <p class="mb-0" style="font-size: 0.95rem;">Bapak Anang Wiharyanto</p>
-                            <p class="mb-0" style="font-size: 0.95rem;">dan</p>
-                            <p class="mb-0" style="font-size: 0.95rem;">Ibu Siti Dawimah</p>
+                            <p class="font-lora mt-3 mb-1" style="font-size: 1.25rem;">Putra ketiga</p>
+                            <p class="font-lora mb-0" style="font-size: 0.95rem;">Bapak Anang Wiharyanto</p>
+                            <p class="font-lora mb-0" style="font-size: 0.95rem;">dan</p>
+                            <p class="font-lora mb-0" style="font-size: 0.95rem;">Ibu Siti Dawimah</p>
                         </div>
 
                         <!-- Love animation -->
@@ -248,19 +248,16 @@
                 <!-- Firman Allah Subhanahu Wa Ta'ala -->
                 <section class="bg-light-dark pt-2 pb-4">
                     <div class="container text-center">
-                        <h2 class="font-esthetic pt-2 pb-1 m-0" style="font-size: 2rem;">Allah Subhanahu Wa Ta'ala
-                            berfirman</h2>
+                        <h2 class="font-esthetic pt-2 pb-1 m-0" style="font-size: 2rem;">Allah Subhanahu Wa Ta'ala berfirman</h2>
 
                         <div class="bg-theme-auto mt-4 p-3 shadow rounded-4" data-aos="fade-down" data-aos-duration="2000">
-                            <p class="p-1 mb-2" style="font-size: 0.95rem;">Dan segala sesuatu Kami ciptakan
-                                berpasang-pasangan agar kamu mengingat (kebesaran Allah).</p>
-                            <p class="m-0 p-0 text-theme-auto" style="font-size: 0.95rem;">QS. Adh-Dhariyat: 49</p>
+                            <p class="font-lora p-1 mb-2" style="font-size: 0.95rem;">Dan segala sesuatu Kami ciptakan berpasang-pasangan agar kamu mengingat (kebesaran Allah).</p>
+                            <p class="font-lora m-0 p-0 text-theme-auto" style="font-size: 0.95rem;">QS. Adh-Dhariyat: 49</p>
                         </div>
 
                         <div class="bg-theme-auto mt-4 p-3 shadow rounded-4" data-aos="fade-down" data-aos-duration="2000">
-                            <p class="p-1 mb-2" style="font-size: 0.95rem;">dan sesungguhnya Dialah yang menciptakan
-                                pasangan laki-laki dan perempuan,</p>
-                            <p class="m-0 p-0 text-theme-auto" style="font-size: 0.95rem;">QS. An-Najm: 45</p>
+                            <p class="font-lora p-1 mb-2" style="font-size: 0.95rem;">dan sesungguhnya Dialah yang menciptakan pasangan laki-laki dan perempuan,</p>
+                            <p class="font-lora m-0 p-0 text-theme-auto" style="font-size: 0.95rem;">QS. An-Najm: 45</p>
                         </div>
                     </div>
                 </section>
@@ -281,22 +278,21 @@
                         <div class="border rounded-pill shadow py-2 px-4 mt-2 mb-4">
                             <div class="row justify-content-center">
                                 <div class="col-3 p-1">
-                                    <p class="d-inline m-0 p-0" style="font-size: 1.25rem;" id="day">0</p><small class="ms-1 me-0 my-0 p-0 d-inline">Hari</small>
+                                    <p class="font-lora d-inline m-0 p-0" style="font-size: 1.25rem;" id="day">0</p><small class="font-lora ms-1 me-0 my-0 p-0 d-inline">Hari</small>
                                 </div>
                                 <div class="col-3 p-1">
-                                    <p class="d-inline m-0 p-0" style="font-size: 1.25rem;" id="hour">0</p><small class="ms-1 me-0 my-0 p-0 d-inline">Jam</small>
+                                    <p class="font-lora d-inline m-0 p-0" style="font-size: 1.25rem;" id="hour">0</p><small class="font-lora ms-1 me-0 my-0 p-0 d-inline">Jam</small>
                                 </div>
                                 <div class="col-3 p-1">
-                                    <p class="d-inline m-0 p-0" style="font-size: 1.25rem;" id="minute">0</p><small class="ms-1 me-0 my-0 p-0 d-inline">Menit</small>
+                                    <p class="font-lora d-inline m-0 p-0" style="font-size: 1.25rem;" id="minute">0</p><small class="font-lora ms-1 me-0 my-0 p-0 d-inline">Menit</small>
                                 </div>
                                 <div class="col-3 p-1">
-                                    <p class="d-inline m-0 p-0" style="font-size: 1.25rem;" id="second">0</p><small class="ms-1 me-0 my-0 p-0 d-inline">Detik</small>
+                                    <p class="font-lora d-inline m-0 p-0" style="font-size: 1.25rem;" id="second">0</p><small class="font-lora ms-1 me-0 my-0 p-0 d-inline">Detik</small>
                                 </div>
                             </div>
                         </div>
 
-                        <p class="py-2 m-0" style="font-size: 0.95rem;">Dengan memohon rahmat dan ridho Allah Subhanahu
-                            Wa Ta'ala, insyaAllah kami akan menyelenggarakan acara:</p>
+                        <p class="font-lora py-2 m-0" style="font-size: 0.95rem;">Dengan memohon rahmat dan ridho Allah Subhanahu Wa Ta'ala, insyaAllah kami akan menyelenggarakan acara:</p>
 
                         <!-- Love animation -->
                         <div class="position-relative">
@@ -310,17 +306,16 @@
                         <div class="overflow-x-hidden">
                             <div class="py-2" data-aos="fade-right" data-aos-duration="1500">
                                 <h2 class="font-esthetic m-0 py-2" style="font-size: 2rem;">Akad</h2>
-                                <p style="font-size: 0.95rem;">Pukul 08.00 WIB - Selesai</p>
+                                <p class="font-lora" style="font-size: 0.95rem;">Pukul 08.00 WIB - Selesai</p>
                             </div>
 
                             <div class="py-2" data-aos="fade-left" data-aos-duration="1500">
                                 <h2 class="font-esthetic m-0 py-2" style="font-size: 2rem;">Resepsi</h2>
-                                <p style="font-size: 0.95rem;">Pukul 11.00 WIB - Selesai</p>
+                                <p class="font-lora" style="font-size: 0.95rem;">Pukul 11.00 WIB - Selesai</p>
                             </div>
                         </div>
 
-                        <p class="py-2 m-0" style="font-size: 0.95rem;">Demi kehangatan bersama, kami memohon kesediaan
-                            Anda untuk mengenakan dress code berikut:</p>
+                        <p class="font-lora py-2 m-0" style="font-size: 0.95rem;">Demi kehangatan bersama, kami memohon kesediaan Anda untuk mengenakan dress code berikut:</p>
 
                         <!-- Love animation -->
                         <div class="position-relative">
@@ -346,8 +341,7 @@
 
                         <div class="py-2" data-aos="fade-down" data-aos-duration="1500">
                             <a href="https://maps.app.goo.gl/XYKVAnjvcPc8mJmB6" target="_blank" class="btn btn-outline-auto btn-sm rounded-pill shadow mb-2 px-3"><i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps</a>
-                            <small class="d-block my-1">ZEITo Kopi & Teras Sore
-                                Jontro, Wedarijaksa, Pati Regency, Central Java 59152</small>
+                            <small class="font-lora d-block my-1">ZEITo Kopi & Teras Sore Jontro, Wedarijaksa, Pati Regency, Central Java 59152</small>
                         </div>
                     </div>
                 </section>
@@ -463,7 +457,7 @@
                 <section class="bg-light-dark py-2 no-gap-bottom">
                     <div class="container text-center">
                         <p class="font-lora pb-2 pt-4" style="font-size: 0.95rem;">Terima kasih atas perhatian dan doa restu Anda, yang menjadi kebahagiaan serta kehormatan besar bagi kami.</p>
-                        <h2 class="font-amiri" style="font-size: 2rem;">Wassalamualaikum Warahmatullahi Wabarakatuh</h2>
+                        <!-- <h2 class="font-amiri" style="font-size: 2rem;">Wassalamualaikum Warahmatullahi Wabarakatuh</h2> -->
                     </div>
                 </section>
             </main>
