--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                 <div class="text-center p-4 bg-overlay-auto rounded-5">
                     <h2 class="font-darleston mb-4" style="font-size: 2rem;">Della &amp; Arsyad</h2>
-                    <p class="m-0" style="font-size: 1rem;">Sabtu, 8 November 2025</p>
+                    <p class="font-lora m-0" style="font-size: 1rem;">Sabtu, 8 November 2025</p>
                 </div>
             </div>
         </div>
@@ -138,13 +138,13 @@
                     <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657824088064022/bg14.webp?ex=68e4bf7e&is=68e36dfe&hm=57fe9f3f07944ccb382d219ed40723dc2d71882f5541ce6ab0bc3b9ea94fdd5f&" fetchpriority="high" decoding="async" alt="bg" class="position-absolute opacity-25 top-50 start-50 translate-middle bg-cover-home">
 
                     <div class="position-relative text-center bg-overlay-auto" style="background-color: unset;">
-                        <h1 class="font-esthetic pt-5 pb-4 fw-medium" style="font-size: 2.25rem;">Undangan Pernikahan
+                        <h1 class="font-darleston pt-5 pb-4 fw-medium" style="font-size: 2.25rem;">Undangan Pernikahan
                         </h1>
 
                         <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&" fetchpriority="high" decoding="async" alt="bg" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
 
                         <h2 class="font-darleston my-4" style="font-size: 2.25rem;">Della &amp; Arsyad</h2>
-                        <p class="my-2" style="font-size: 1.25rem;">Sabtu, 8 November 2025</p>
+                        <p class="font-lora my-2" style="font-size: 1.25rem;">Sabtu, 8 November 2025</p>
 
                         <button class="btn btn-outline-auto btn-sm shadow rounded-pill px-3 py-1" style="font-size: 0.825rem;">
                             <i class="fa-solid fa-calendar-check me-2"></i>Save Google Calendar
@@ -156,7 +156,7 @@
                             </div>
                         </div>
 
-                        <p class="pb-4 m-0 text-secondary" style="font-size: 0.825rem;">Scroll Down</p>
+                        <p class="font-lora pb-4 m-0 text-secondary" style="font-size: 0.825rem;">Scroll Down</p>
                     </div>
                 </section>
 
@@ -186,7 +186,7 @@
                             <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657929419755640/cewe.webp?ex=68e4bf97&is=68e36e17&hm=71a677f868a494894024108cbfca0d5de59c30fc24a195855cfec5d3292a3235&" fetchpriority="high" decoding="async" alt="cewe" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
                         </div>
                         <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
-                            <h2 class="font-esthetic m-0" style="font-size: 2.125rem;">Novita Rizkia Della Khairunnisa</h2>
+                            <h2 class="font-darleston m-0" style="font-size: 2.125rem;">Novita Rizkia Della Khairunnisa</h2>
                         </div>
                         <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
                             <p class="font-lora mt-3 mb-1" style="font-size: 1.25rem;">Putri pertama</p>
@@ -204,7 +204,7 @@
                     </div>
 
                     <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
-                        <h2 class="font-esthetic mt-4" style="font-size: 4.5rem;">&amp;</h2>
+                        <h2 class="font-darleston mt-4" style="font-size: 4.5rem;">&amp;</h2>
                     </div>
 
                     <div class="position-relative">
@@ -219,7 +219,7 @@
                             <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424670175944511520/cowo.webp?ex=68e4caff&is=68e3797f&hm=f48e26d6b06876d4fefe858e4aa1eccb267f6f2530abfb40fddd00561943a309&" fetchpriority="high" decoding="async" alt="cowo" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
                         </div>
                         <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
-                            <h2 class="font-esthetic m-0" style="font-size: 2.125rem;">Arsyad Muhammad Khoiri</h2>
+                            <h2 class="font-darleston m-0" style="font-size: 2.125rem;">Arsyad Muhammad Khoiri</h2>
                         </div>
                         <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
                             <p class="font-lora mt-3 mb-1" style="font-size: 1.25rem;">Putra ketiga</p>
@@ -248,7 +248,7 @@
                 <!-- Firman Allah Subhanahu Wa Ta'ala -->
                 <section class="bg-light-dark pt-2 pb-4">
                     <div class="container text-center">
-                        <h2 class="font-esthetic pt-2 pb-1 m-0" style="font-size: 2rem;">Allah Subhanahu Wa Ta'ala berfirman</h2>
+                        <h2 class="font-darleston pt-2 pb-1 m-0" style="font-size: 2rem;">Allah Subhanahu Wa Ta'ala berfirman</h2>
 
                         <div class="bg-theme-auto mt-4 p-3 shadow rounded-4" data-aos="fade-down" data-aos-duration="2000">
                             <p class="font-lora p-1 mb-2" style="font-size: 0.95rem;">Dan segala sesuatu Kami ciptakan berpasang-pasangan agar kamu mengingat (kebesaran Allah).</p>
@@ -273,7 +273,7 @@
                 <!-- Wedding Date -->
                 <section class="bg-white-black pb-2" id="wedding-date">
                     <div class="container text-center">
-                        <h2 class="font-esthetic py-4 m-0" style="font-size: 2.25rem;">Moment Bahagia</h2>
+                        <h2 class="font-darleston py-4 m-0" style="font-size: 2.25rem;">Moment Bahagia</h2>
 
                         <div class="border rounded-pill shadow py-2 px-4 mt-2 mb-4">
                             <div class="row justify-content-center">
@@ -305,12 +305,12 @@
 
                         <div class="overflow-x-hidden">
                             <div class="py-2" data-aos="fade-right" data-aos-duration="1500">
-                                <h2 class="font-esthetic m-0 py-2" style="font-size: 2rem;">Akad</h2>
+                                <h2 class="font-darleston m-0 py-2" style="font-size: 2rem;">Akad</h2>
                                 <p class="font-lora" style="font-size: 0.95rem;">Pukul 08.00 WIB - Selesai</p>
                             </div>
 
                             <div class="py-2" data-aos="fade-left" data-aos-duration="1500">
-                                <h2 class="font-esthetic m-0 py-2" style="font-size: 2rem;">Resepsi</h2>
+                                <h2 class="font-darleston m-0 py-2" style="font-size: 2rem;">Resepsi</h2>
                                 <p class="font-lora" style="font-size: 0.95rem;">Pukul 11.00 WIB - Selesai</p>
                             </div>
                         </div>
@@ -336,7 +336,7 @@
                                     style="width: 3rem; height: 3rem; background-color: limegreen; margin-left: -1rem;">
                                 </div> -->
                             </div>
-                            <p style="font-size: 0.95rem;">Busana batik dan bersepatu.</p>
+                            <p class="font-lora" style="font-size: 0.95rem;">Busana batik dan bersepatu.</p>
                         </div>
 
                         <div class="py-2" data-aos="fade-down" data-aos-duration="1500">
@@ -351,7 +351,7 @@
                     <div class="container">
                         <div class="border rounded-5 shadow p-3">
 
-                            <h2 class="font-esthetic text-center py-2 m-0" style="font-size: 2.25rem;">Galeri</h2>
+                            <h2 class="font-darleston text-center py-2 m-0" style="font-size: 2.25rem;">Galeri</h2>
 
                             <div class="container mt-3">
                                 <!-- <div class="row">
@@ -468,25 +468,25 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#home">
                             <i class="fa-solid fa-house"></i>
-                            <span class="d-block" style="font-size: 0.7rem;">Home</span>
+                            <span class="font-lora d-block" style="font-size: 0.7rem;">Home</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#bride">
                             <i class="fa-solid fa-user-group"></i>
-                            <span class="d-block" style="font-size: 0.7rem;">Mempelai</span>
+                            <span class="font-lora d-block" style="font-size: 0.7rem;">Mempelai</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#wedding-date">
                             <i class="fa-solid fa-calendar-check"></i>
-                            <span class="d-block" style="font-size: 0.7rem;">Tanggal</span>
+                            <span class="font-lora d-block" style="font-size: 0.7rem;">Tanggal</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#gallery">
                             <i class="fa-solid fa-images"></i>
-                            <span class="d-block" style="font-size: 0.7rem;">Galeri</span>
+                            <span class="font-lora d-block" style="font-size: 0.7rem;">Galeri</span>
                         </a>
                     </li>
                 </ul>
@@ -498,14 +498,14 @@
     <div class="loading-page bg-white-black" id="welcome" style="opacity: 1;">
         <div class="d-flex justify-content-center align-items-center vh-100 overflow-y-auto">
             <div class="d-flex flex-column text-center">
-                <h2 class="font-esthetic mb-4" style="font-size: 2.25rem;">The Wedding Of</h2>
+                <h2 class="font-darleston mb-4" style="font-size: 2.25rem;">The Wedding Of</h2>
 
                 <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&" fetchpriority="high" decoding="async" alt="background" class="img-center-crop rounded-circle border border-3 border-light shadow mb-4 mx-auto">
 
                 <h2 class="font-darleston mb-4" style="font-size: 2.25rem;">Della &amp; Arsyad</h2>
                 <div id="guest-name" data-message="Kepada Yth Bapak/Ibu/Saudara/i"></div>
 
-                <button type="button" class="btn btn-light shadow rounded-4 mt-3 mx-auto" onclick="undangan.guest.open(this)"><i class="fa-solid fa-envelope-open fa-bounce me-2"></i>Open Invitation</button>
+                <button type="button" class="font-lora btn btn-light shadow rounded-4 mt-3 mx-auto" onclick="undangan.guest.open(this)"><i class="fa-solid fa-envelope-open fa-bounce me-2"></i>Open Invitation</button>
             </div>
         </div>
     </div>
