--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 
 <!-- <body data-audio="./assets/music/pure-love-304010.mp3" data-confetti="true" data-time="2025-11-08 08:00:00"> -->
 
-<body data-key="d9faced3377732b0edf19e90d1bde0cd5de04801c75eb41743" data-url="https://api.ulems.my.id/" data-confetti="false" data-time="2025-11-08 08:00:00">
+<!-- <body data-key="d9faced3377732b0edf19e90d1bde0cd5de04801c75eb41743" data-url="https://api.ulems.my.id/" data-confetti="false" data-time="2025-11-08 08:00:00"> -->
+<body data-audio="./assets/music/elijah_woods-247_365_2.mp3" data-confetti="true" data-time="2025-11-08 08:00:00">
 
     <!-- Root Invitation -->
     <div class="row m-0 p-0 opacity-0" id="root">
@@ -350,24 +351,6 @@
                             <h2 class="font-darleston text-center py-2 m-0" style="font-size: 2.25rem;">Galeri</h2>
 
                             <div class="container mt-3">
-                                <!-- <div class="row">
-                                    <div class="mb-1">
-                                        <img src="https://picsum.photos/1000/1000" class="img-fluid rounded">
-                                    </div>
-                                    <div class="mb-1">
-                                        <img src="https://picsum.photos/1000/1000" class="img-fluid rounded">
-                                    </div>
-                                    <div class="mb-1">
-                                        <img src="https://picsum.photos/1000/1000" class="img-fluid rounded">
-                                    </div>
-                                    <div class="mb-1">
-                                        <img src="https://picsum.photos/1000/1000" class="img-fluid rounded">
-                                    </div>
-                                    <div class="mb-1">
-                                        <img src="https://picsum.photos/1000/1000" class="img-fluid rounded">
-                                    </div>
-                                </div> -->
-
                                 <div class="row">
                                     <div class="mb-1">
                                         <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&" class="img-fluid rounded">
@@ -388,54 +371,6 @@
                                         <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424658316440895599/bg15.webp?ex=68e4bff3&is=68e36e73&hm=fc5cd23390bd797515ea8075fc7e6647f913aca655ce72d913bd502671f77f7c&" class="img-fluid rounded">
                                     </div>
                                 </div>
-
-                                <!-- <div class="row">
-                                    <div class="col-4 mb-3 px-1">
-                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424658100945686618/bg5.webp?ex=68e4bfc0&is=68e36e40&hm=909973992ff675da16906f5b08386a37ba89ebc3e4e0520170128d971d200603&" class="img-fluid rounded" alt="Image 1">
-                                    </div>
-                                    <div class="col-4 mb-3 px-1">
-                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424658189122801715/bg6.webp?ex=68e4bfd5&is=68e36e55&hm=cbc81d8fda05875f40e2d61e59ceb025b3b1e7c8b6c504c9d0c81b119f770adc&" class="img-fluid rounded" alt="Image 2">
-                                    </div>
-                                    <div class="col-4 mb-3 px-1">
-                                        <img src="./assets/images/bg7.webp" class="img-fluid rounded" alt="Image 3">
-                                    </div>
-                                </div> -->
-
-                                <!-- <div class="row">
-                                    <div class="col-4 mb-3 px-1">
-                                        <img src="./assets/images/bg8.webp" class="img-fluid rounded" alt="Image 1">
-                                    </div>
-                                    <div class="col-4 mb-3 px-1">
-                                        <img src="./assets/images/bg9.webp" class="img-fluid rounded" alt="Image 2">
-                                    </div>
-                                    <div class="col-4 mb-3 px-1">
-                                        <img src="./assets/images/bg10.webp" class="img-fluid rounded" alt="Image 3">
-                                    </div>
-                                </div> -->
-
-                                <!-- <div class="row">
-                                    <div class="col-4 mb-3 px-1">
-                                        <img src="./assets/images/bg11.webp" class="img-fluid rounded" alt="Image 1">
-                                    </div>
-                                    <div class="col-4 mb-3 px-1">
-                                        <img src="./assets/images/bg12.webp" class="img-fluid rounded" alt="Image 2">
-                                    </div>
-                                    <div class="col-4 mb-3 px-1">
-                                        <img src="./assets/images/bg13.webp" class="img-fluid rounded" alt="Image 3">
-                                    </div>
-                                </div> -->
-
-                                <!-- <div class="row">
-                                    <div class="col-4 mb-3 px-1">
-                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657824088064022/bg14.webp?ex=68e4bf7e&is=68e36dfe&hm=57fe9f3f07944ccb382d219ed40723dc2d71882f5541ce6ab0bc3b9ea94fdd5f&" class="img-fluid rounded" alt="Image 1">
-                                    </div>
-                                    <div class="col-4 mb-3 px-1">
-                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424658316440895599/bg15.webp?ex=68e4bff3&is=68e36e73&hm=fc5cd23390bd797515ea8075fc7e6647f913aca655ce72d913bd502671f77f7c&" class="img-fluid rounded" alt="Image 2">
-                                    </div>
-                                    <div class="col-4 mb-3 px-1">
-                                        <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650187187552408/bg.webp?ex=68e4b861&is=68e366e1&hm=35a274e25acf28b7c37d5ea5971c29c83d0d0ae26d2d8a33c43a073075bbdc05&=&format=webp&width=725&height=544" class="img-fluid rounded" alt="Image 3">
-                                    </div>
-                                </div> -->
                             </div>
                         </div>
                     </div>
