--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <!-- https://www.youtube.com/watch?v=r8EVmdyJp-M -->
 <!-- https://weddingofarsyadmk.novitardella.com/assets/music/elijah_woods-247_365_2.mp3 -->
 
-<body data-audio="https://www.youtube.com/watch?v=r8EVmdyJp-M" data-confetti="true" data-time="2025-11-08 08:00:00">
+<body data-audio="./assets/music/elijah_woods-247_365_2.mp3" data-confetti="true" data-time="2025-11-08 08:00:00">
 
     <!-- Root Invitation -->
     <div class="row m-0 p-0 opacity-0" id="root">
